<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_reg_frame"
    tools:context=".register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="@font/telex"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:text="@string/register_label_email"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/edit_register_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_frame"
                android:fontFamily="@font/telex"
                android:hint="@string/register_edit_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_holder_login"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="@font/telex"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_label_fullname"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/edit_register_last_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_frame"
                android:fontFamily="@font/telex"
                android:hint="@string/register_edit_last_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_holder_login"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_register_first_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_frame"
                android:fontFamily="@font/telex"
                android:hint="@string/register_edit_first_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_holder_login"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/telex"
                android:layout_marginTop="10dp"
                android:text="@string/register_label_gender"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"/>

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_frame"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple"
                    android:checked="true"
                    android:fontFamily="@font/telex"
                    android:text="@string/register_select1_gender"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/female_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:buttonTint="@color/purple"
                    android:checked="false"
                    android:fontFamily="@font/telex"
                    android:text="@string/register_select2_gender"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_label_birthday"
                android:fontFamily="@font/telex"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/edit_register_birthday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_register_state"
                android:fontFamily="@font/telex"
                android:gravity="left|center_vertical"
                android:hint="@string/register_button_birthday"
                android:paddingLeft="15dp"
                android:stateListAnimator="@null"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_holder_login"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_label_phone"
                android:fontFamily="@font/telex"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/edit_register_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_frame"
                android:fontFamily="@font/telex"
                android:hint="@string/register_edit_phone"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_holder_login"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_label_country"
                android:fontFamily="@font/telex"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/edit_register_country"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_frame"
                android:fontFamily="@font/telex"
                android:hint="@string/register_edit_country"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_holder_login"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_label_job"
                android:fontFamily="@font/telex"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/edit_register_job"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_frame"
                android:fontFamily="@font/telex"
                android:hint="@string/register_edit_job"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_holder_login"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="@font/telex"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_label_relationship"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spinner_relationship"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_register_state"
                android:backgroundTint="@color/purple"
                android:popupBackground="@color/gray_holder_login"
                android:spinnerMode="dropdown" />

            <TextView
                android:fontFamily="@font/telex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_label_identity_card"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/edit_register_identity_card_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_frame"
                android:fontFamily="@font/telex"
                android:hint="@string/register_edit_identity_card"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_holder_login"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="left|center_horizontal"
                android:padding="20dp"
                android:fontFamily="@font/telex"
                android:text="@string/notice_register_1"
                android:textColor="@color/gray_holder_login"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_register_next"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/button_register_activity"
                android:drawableRight="@drawable/icon_next_resize"
                android:fontFamily="@font/telex"
                android:onClick="clickToNextRegister"
                android:padding="10dp"
                android:stateListAnimator="@null"
                android:text="@string/register_button_next"
                android:textAllCaps="false"
                android:textColor="@color/blue_app"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>