<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_reg_frame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_account"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:src="@drawable/image_avatar_default" />

        <TextView
            android:id="@+id/label_fullname_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/telex"
            android:gravity="center"
            android:text="@string/information_label_fullname"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/house_name_account"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/label_house_code_gradient"
            android:stateListAnimator="@null"
            android:text="@string/information_label_housecode"
            android:textColor="@color/end_gradient" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/telex"
            android:paddingLeft="20dp"
            android:text="@string/information_label_individual"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="0.25dp"
            android:layout_marginTop="35dp"
            android:background="@color/gray_holder_login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/telex"
            android:paddingLeft="20dp"
            android:text="@string/information_label_family"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

